--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -13,16 +13,6 @@ const bottomLinks = [
         href: 'https://twitter.com/',
         isExternal: true,
       },
-      {
-        name: 'Instagram',
-        href: 'https://instagram.com/',
-        isExternal: true,
-      },
-      {
-        name: 'Facebook',
-        href: 'https://facebook.com/',
-        isExternal: true,
-      },
     ],
   },
   {
@@ -92,7 +82,7 @@ const bottomLinks = [
           Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and
           Startup websites.
         </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2023 Stone</p>
+        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2025</p>
       </div>
 
       <!-- Bottom links -->
